--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
+    "gatsby-source-filesystem": "^2.1.43",
     "lodash": "^4.17.15",
     "oneline": "^1.0.3"
   },
@@ -35,6 +36,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "gatsby": "^2.18.17",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
