--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-notionso",
   "description": "A Gatsby source plugin for sourcing data into your Gatsby application using Notion.so as a backend.",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.js",
   "repository": "https://github.com/pcarion/gatsby-source-notionso.git",
   "author": "Pierre Carion <pcarion@gmail.com>",
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --write src/**/*.{ts,tsx}",
+    "test": "jest",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build && npm test"
   },
