--- a/examples/plugin-site/package.json
+++ b/examples/plugin-site/package.json
@@ -11,8 +11,10 @@
     "deploy": "gatsby clean && gatsby build && gh-pages -d public"
   },
   "dependencies": {
+    "bulma": "^0.8.0",
     "gatsby": "^2.18.21",
     "gatsby-source-notionso": "^0.0.6",
+    "highlight.js": "^9.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
