--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "gatsby-source-notionso",
   "description": "A Gatsby source plugin for sourcing data into your Gatsby application using Notion.so as a backend.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": "https://github.com/pcarion/gatsby-source-notionso.git",
+  "homepage": "https://www.gatsbyplugins.com",
   "author": "Pierre Carion <pcarion@gmail.com>",
   "license": "BSD-3-Clause",
   "scripts": {
